--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Barra Superior en Columnas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <!-- Barra Superior -->
+    <header class="barra-superior">
+        <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="subpagina1.html">Subpágina 1</a></li>
                 <li><a href="subpagina2.html">Subpágina 2</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Contenido Principal -->
     <main>
-        <h1>Bienvenido a la Página Principal</h1>
-        <p>Haz clic en los enlaces del menú para navegar a otras páginas.</p>
+        <h1>Bienvenido a mi página web</h1>
+        <p>Esta es la página principal.</p>
     </main>
 </body>
 </html>
