--- a/menu.html
+++ b/menu.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Menú</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Menú Superior -->
     <header class="barra-superior">
         <nav class="menu">
             <ul>
@@ -18,17 +17,5 @@
             </ul>
         </nav>
     </header>
-
-    <!-- Contenido Principal -->
-    <main>
-        <h1>Bienvenido a la Página Principal</h1>
-        <p>Explora las diferentes secciones desde el menú superior o utiliza los botones a continuación:</p>
-
-        <!-- Botones Centrados -->
-        <div class="botones">
-            <a href="subpagina1.html" class="boton">Soy Talento</a>
-            <a href="subpagina2.html" class="boton">Busco Talento</a>
-        </div>
-    </main>
 </body>
 </html>
