--- a/subpagina1.html
+++ b/subpagina1.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <!-- Menú Superior -->
+    <header class="barra-superior">
+        <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="subpagina1.html" class="active">Subpágina 1</a></li>
                 <li><a href="subpagina2.html">Subpágina 2</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Contenido Principal -->
     <main>
         <h1>Subpágina 1</h1>
-        <p>Este es el contenido de la primera subpágina.</p>
+        <p>Esta es la primera subpágina. Personaliza su contenido aquí.</p>
     </main>
 </body>
 </html>
-
