--- a/subpagina2.html
+++ b/subpagina2.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subpágina 1</title>
+    <title>Subpágina 2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <!-- Menú Superior -->
+    <header class="barra-superior">
+        <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="subpagina1.html" class="active">Subpágina 1</a></li>
-                <li><a href="subpagina2.html">Subpágina 2</a></li>
+                <li><a href="subpagina1.html">Subpágina 1</a></li>
+                <li><a href="subpagina2.html" class="active">Subpágina 2</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Contenido Principal -->
     <main>
-        <h1>Subpágina 1</h1>
-        <p>Este es el contenido de la primera subpágina.</p>
+        <h1>Subpágina 2</h1>
+        <p>Esta es la segunda subpágina. Personaliza su contenido aquí.</p>
     </main>
 </body>
 </html>
