--- a/contacto.html
+++ b/contacto.html
@@ -12,9 +12,9 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="subpagina1.html">Subpágina 1</a></li>
-                <li><a href="subpagina2.html">Subpágina 2</a></li>
-                <li><a href="contacto.html" class="active">Contacto</a></li>
+                <li><a href="busco_talento.html" class="active">Busco Talento</a></li>
+                <li><a href="soy_talento.html">Soy Talento</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
