--- a/soy_talento.html
+++ b/soy_talento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Subpágina 2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="busco_talento.html">Busco Talento</a></li>
+                <li><a href="busco_talento.html" class="active">Busco Talento</a></li>
                 <li><a href="soy_talento.html">Soy Talento</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -21,14 +21,8 @@
 
     <!-- Contenido Principal -->
     <main>
-        <h1>Bienvenido a la Página Principal</h1>
-        <p>Explora las diferentes secciones desde el menú superior o utiliza los botones a continuación:</p>
-
-        <!-- Botones Centrados -->
-        <div class="botones">
-            <a href="busco_talento.html" class="boton">Soy Talento</a>
-            <a href="soy_talento.html" class="boton">Busco Talento</a>
-        </div>
+        <h1>Subpágina 2</h1>
+        <p>Esta es la segunda subpágina. Personaliza su contenido aquí.</p>
     </main>
 </body>
 </html>
