--- a/busco_talento.html
+++ b/busco_talento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subpágina 1</title>
+    <title>Busco Talento</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
 
     <!-- Contenido Principal -->
     <main>
-        <h1>Subpágina 1</h1>
-        <p>Esta es la primera subpágina. Personaliza su contenido aquí.</p>
+        <h1>Busco Talento</h1>
+        <p>Esta es la pagina de Busco talento. Aqui encontrarás lo necesario para encontrar al profesional que estás buscando.</p>
     </main>
 </body>
 </html>
