--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <!-- Botones Centrados -->
         <div class="botones">
-            <a href="busco_talento.html" class="boton">Soy Talento</a>
-            <a href="soy_talento.html" class="boton">Busco Talento</a>
+            <a href="busco_talento.html" class="boton">Busco Talento</a>
+            <a href="soy_talento.html" class="boton">Soy Talento</a>
         </div>
     </main>
 </body>
