--- a/soy_talento.html
+++ b/soy_talento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subpágina 2</title>
+    <title>Soy Talento</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
 
     <!-- Contenido Principal -->
     <main>
-        <h1>Subpágina 2</h1>
-        <p>Esta es la segunda subpágina. Personaliza su contenido aquí.</p>
+        <h1>Soy Talento</h1>
+        <p>Esta es la pagina para Soy Talento. En esta pagina podras encontrar todo lo que necesitas para encontrar trabajo.</p>
     </main>
 </body>
 </html>
