Added buttons for Crear cuenta and login

--- a/soy_talento.html
+++ b/soy_talento.html
@@ -12,8 +12,8 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="busco_talento.html" class="active">Busco Talento</a></li>
-                <li><a href="soy_talento.html">Soy Talento</a></li>
+                <li><a href="soy-talento.html" class="active">Soy Talento</a></li>
+                <li><a href="busco-talento.html">Busco Talento</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -22,7 +22,13 @@
     <!-- Contenido Principal -->
     <main>
         <h1>Soy Talento</h1>
-        <p>Esta es la pagina para Soy Talento. En esta pagina podras encontrar todo lo que necesitas para encontrar trabajo.</p>
+        <p>¿Eres un talento y quieres destacar? Elige una opción a continuación:</p>
+
+        <!-- Botones Centrados -->
+        <div class="botones">
+            <a href="crear-cuenta.html" class="boton">Crear Cuenta</a>
+            <a href="login.html" class="boton">Ya Tengo una Cuenta</a>
+        </div>
     </main>
 </body>
 </html>
