--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="barra-superior">
         <nav class="menu">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html" class="active">Inicio</a></li>
                 <li><a href="busco_talento.html">Busco Talento</a></li>
                 <li><a href="soy_talento.html">Soy Talento</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
