--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="soy-talento.html">Soy Talento</a></li>
+                <li><a href="soy-talento.html" class="active">Soy Talento</a></li>
                 <li><a href="busco-talento.html">Busco Talento</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
