Fixed active buttons, superior bar

--- a/soy_talento.html
+++ b/soy_talento.html
@@ -12,8 +12,8 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="busco-talento.html" class="active">Busco Talento</a></li>
-                <li><a href="soy-talento.html">Soy Talento</a></li>                
+                <li><a href="busco-talento.html" >Busco Talento</a></li>
+                <li><a href="soy-talento.html" class="active">Soy Talento</a></li>                
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
