--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html" class="active">Inicio</a></li>
-                <li><a href="busco_talento.html">Busco Talento</a></li>
-                <li><a href="soy_talento.html">Soy Talento</a></li>
+                <li><a href="busco-talento.html">Busco Talento</a></li>
+                <li><a href="soy-talento.html">Soy Talento</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
