--- a/soy-talento.html
+++ b/soy-talento.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- Barra del Logo -->
+    <div class="barra-logo">
+        <div class="logo">
+            <img src="skp_logo.webp" alt="Logo de la Página">
+        </div>
+    </div>
+
     <!-- Menú Superior -->
     <header class="barra-superior">
         <nav class="menu">
